--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,63 @@
 <Project>
+
+  <!-- Building -->
   <PropertyGroup>
-	<UseArtifactsOutput>true</UseArtifactsOutput>
+    <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
+    <DebugType>embedded</DebugType>
+    <Optimize Condition="'$(Configuration)'=='Release'">True</Optimize>
+    <SatelliteResourceLanguages>none</SatelliteResourceLanguages>
   </PropertyGroup>
+
+  <!-- Development -->
+  <PropertyGroup>
+    <AnalysisLevel>latest-all</AnalysisLevel>
+    <Configurations>Debug;Release</Configurations>
+    <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <ImplicitUsings>disable</ImplicitUsings>
+    <IsPublishable>True</IsPublishable>
+    <NoWarn>$(NoWarn);CA2007</NoWarn>
+    <Nullable>enable</Nullable>
+    <PathMap>$(MSBuildProjectDirectory)=./$(MSBuildProjectName)</PathMap>
+    <Platforms>x64;ARM64;AnyCPU</Platforms>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+    <TargetFramework>net9.0</TargetFramework>
+	  <UseArtifactsOutput>true</UseArtifactsOutput>
+    <WarningsAsErrors>nullable</WarningsAsErrors>
+  </PropertyGroup>
+
+  <!-- Metadata -->
+  <PropertyGroup>
+    <Authors>Zagrthos</Authors>
+    <Copyright>© 2024 - $(Authors)</Copyright>
+    <Description>A GUI Manager for customizing the SWTOR Chat.</Description>
+    <IncludeSourceRevisionInInformationalVersion>False</IncludeSourceRevisionInInformationalVersion>
+    <NeutralLanguage>en</NeutralLanguage>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/Zagrthos/SWTOR-ChatColorManager</PackageProjectUrl>
+    <Product>$(AssemblyName)</Product>
+    <RepositoryType>Git</RepositoryType>
+    <RepositoryUrl>$(PackageProjectUrl)</RepositoryUrl>
+    <Title>$(ProductName)</Title>
+    <Version>2.0.0</Version>
+  </PropertyGroup>
+
+  <!-- Packaging -->
+  <ItemGroup>
+    <None Include="..\..\LICENSE" Pack="True" PackagePath="" />
+  </ItemGroup>
+
+  <!-- Runtimeconfig Settings -->
+  <PropertyGroup>
+    <!-- JIT Settings -->
+    <TieredCompilation>True</TieredCompilation>
+    <TieredCompilationQuickJit>True</TieredCompilationQuickJit>
+    <TieredCompilationQuickJitForLoops>True</TieredCompilationQuickJitForLoops>
+    <TieredPGO>True</TieredPGO>
+
+    <!-- Globalization -->
+    <InvariantGlobalization>False</InvariantGlobalization>
+  </PropertyGroup>
+
 </Project>
