--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,16 +3,16 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.3.2" />
-    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.0-rc.2.24473.5" />
+    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
     <PackageVersion Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
-    <PackageVersion Include="NReco.Logging.File" Version="1.2.1" />
+    <PackageVersion Include="NReco.Logging.File" Version="1.2.2" />
     <PackageVersion Include="PixiEditor.ColorPicker" Version="3.4.1" />
-    <PackageVersion Include="Roslynator.Analyzers" Version="4.12.9" />
-    <PackageVersion Include="Roslynator.CodeAnalysis.Analyzers" Version="4.12.9" />
-    <PackageVersion Include="Roslynator.CodeFixes" Version="4.12.9" />
-    <PackageVersion Include="Roslynator.Formatting.Analyzers" Version="4.12.9" />
-    <PackageVersion Include="Roslynator.Refactorings" Version="4.12.9" />
-    <PackageVersion Include="SonarAnalyzer.CSharp" Version="9.32.0.97167" />
+    <PackageVersion Include="Roslynator.Analyzers" Version="4.12.10" />
+    <PackageVersion Include="Roslynator.CodeAnalysis.Analyzers" Version="4.12.10" />
+    <PackageVersion Include="Roslynator.CodeFixes" Version="4.12.10" />
+    <PackageVersion Include="Roslynator.Formatting.Analyzers" Version="4.12.10" />
+    <PackageVersion Include="Roslynator.Refactorings" Version="4.12.10" />
+    <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.4.0.108396" />
   </ItemGroup>
 </Project>
